--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,8 @@
             <li><a href="/kanji/n3">Kanji N3</a></li>
             <li><a href="/kanji/n2">Kanji N2</a></li>
             <li><a href="/kanji/n1">Kanji N1</a></li>
-            {% include 'comp-search.html' %}
+            <li><a href="/search">Search Word</a></li>
+            <li><a href="/definition">Search Definition</a></li>
         </ul>
     </div>
     <p style="width: 100%; text-align: center; color: white;">Thanks to Jisho.org, please check <a href="https://jisho.org">here to see</a></p>
