--- a/templates/search.html
+++ b/templates/search.html
@@ -75,7 +75,10 @@
 
   </div>
 
-  <h1 data="" onclick="toggleBlur(this)">{{ totalWord }}</h1>
+  <div style="display: flex; justify-content: space-between; align-items: center;">
+    <h1 data="" onclick="toggleBlur(this)">{{ totalWord }}</h1>
+    <a href="/" style="text-decoration: none; padding:5px 10px; border-radius: 5px; background-color: rgb(0, 0, 0);">&larr;HOME</a>
+  </div>
   {% include 'comp-search.html' %}
 
   <div class="row">
