feat: add iframe kanshudo to search reibun

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@
             <li><a href="/kanji/n1">Kanji N1</a></li>
             <li><a href="/search">Search Word</a></li>
             <li><a href="/definition">Search Definition</a></li>
+            <li><a href="/sentence ">Search Example Sentences</a></li>
         </ul>
     </div>
     <p style="width: 100%; text-align: center; color: white;">Thanks to Jisho.org, please check <a href="https://jisho.org">here to see</a></p>
