focus eventlistener remove metakey

--- a/templates/definition.html
+++ b/templates/definition.html
@@ -65,7 +65,7 @@
           name="query"
           id="combo_txt"
           class="formBox"
-          placeholder="type command + /"
+          placeholder="type /"
         />
         <select name="searchType" class="formSelect">
           <option value="exact" selected="">と一致する</option>
