--- a/templates/sentence.html
+++ b/templates/sentence.html
@@ -51,7 +51,7 @@
           name="query"
           id="combo_txt"
           class="formBox"
-          placeholder="type command + /"
+          placeholder="type /"
         />
       </div>
       <div>
