--- a/templates/comp-search.html
+++ b/templates/comp-search.html
@@ -1,5 +1,5 @@
 <div>
-    <input name="search" id="search" placeholder="type command + /" onchange="find(this)"/>
+    <input name="search" id="search" placeholder="type /" onchange="find(this)"/>
 
     <script>
         function find(e){
